Anlab.Mvc/Client/css/components.scss
//datepicker css
@import "~react-datepicker/dist/react-datepicker.css";

//images
.imagewrapper {
  width: auto;
  margin-top: 7px;

  img {
    margin: 0;
    padding: 0 0 10px;
  }

  &.imagewrapper--left {
    float: left;
    max-width: 300px;
    padding-right: 5%;
  }

  &.imagewrapper--right {
    float: right;
    max-width: 300px;
    padding-left: 5%;
  }

  &.imagewrapper--fullwidth img {
    width: 100%;
  }
}

.img-respo {
  max-width: 100%;
  height: auto;
}

.btn {
    white-space: nowrap;
    display: inline-block;
    height: 40px;
    line-height: 40px;
    padding: 0 20px;
    box-shadow: 0 -3px 0 rgba(0, 0, 0, 0.15) inset, 0 1px 3px rgba(0,0,0,.08);
    background: $primary-color;
    border-radius: 2px;
    font-size: 1.6rem;
    letter-spacing: 0.025em;
    color: #fff !important;
    text-decoration: none;
    transition: all 0.15s ease;
    border: none;
    font-family: $sans-bold;

    &:active, &:focus {
        background-color: darken($primary-color, 5);
    }

    &:hover {
        color: #fff !important;
        transform: translateY(-1px);
        box-shadow: 0 -3px 0 rgba(0, 0, 0, 0.15) inset, 0 3px 6px rgba(0,0,0,.08);
        background-color: lighten($primary-color, 5);
    }

    &.btn-small {
        font-size: 1.4rem;
    }

    &.btn-discountcode {
        box-shadow: none;
        background-color: #C6C6C6;
        height: 40px;
        margin-bottom: 3px;
        border-radius: 0;
        font-weight: bold;
    }

    &.btn-16 {
        font-size: 1.6rem;
    }

    &.btn-18 {
        font-size: 1.8rem;
    }

    &.btn-20 {
        font-size: 2.0rem;
    }

    &.btn-red {
        background-color: $unitrans-red;

        &:hover {
            color: #fff !important;
            transform: translateY(-1px);
            box-shadow: 0 -3px 0 rgba(0, 0, 0, 0.15) inset, 0 3px 6px rgba(0,0,0,.08);
            background-color: lighten($unitrans-red, 5);
        }
    }

    &.btn-blue {
        background-color: $blue;
    }

    &.btn-green {
        background-color: $sunny-grass;
    }

    &.btn-order {
        background-color: #fff;
        box-shadow: none;
        color: $primary-color !important;
    }

    &.btn-newClient {
        background-color: #fff;
        box-shadow: none;
        color: $primary-color !important;
        border:1px solid $borders;
        border-color: $primary-color;
        &.btn-error {
            border-color: $unitrans-red;
        }
    }
}
.btn-hollow {
  background-color: #fff;
  border: 1px solid $borders;
  color: $secondary-font;
  box-shadow: none;
  border-radius:2px;
  padding:5px 10px;
  &:hover {
    color:$primary-color;
    border-color:$primary-color;
  }
}

.float-right {
  float: right;
}

.sunny-grass {
  color: $sunny-grass !important;
}

.bg-sunny-grass {
  background-color: $sunny-grass !important;
}

.bg-wine-grape {
  background-color: $wine-grape !important;
}

.bg-recpool-blue {
  background-color: $recpool-blue !important;
}

.bg-unitrans-red {
  background-color: $unitrans-red !important;
}

.bg-golden-lupine {
  background-color: $golden-lupine !important;
}

.bg-california-poppy {
  background-color: $california-poppy !important;
}

.t-center {
  text-align: center;
}

.t-secondary-font {
  color: $secondary-font;
}

.boundary {
  width: 80%;
  margin: 0 auto;
  min-width: 300px;
  max-width: $max-width;
  @include breakpoint(rufus) {
    width: 90%;
  }
  @include breakpoint(mobileonly) {
    width: 95%;
  }
}

.border-bot {
  border-bottom: 1px solid $borders;
}

.border-top {
  border-top: 1px solid $borders;
  padding-top: 16px;
  margin-top: 8%;
}

.bg-second {
  background-color: $bg-color;
}

.flex-it {
  display: flex;
  justify-content: space-between;
}

.flex-flow-wrap {
  flex-flow: wrap;
}

.flex-align-center {
  align-items: center;
}

.whiteblock {
  background-color: #fff;
  padding: 24px 32px;
}

.pagetitle_banner {
  background-color: #fff;
  margin-bottom: 24px;
  .pagetitle_banner_contents {
    @include boundary;
    height: 80px;
    display: flex;
    align-items: flex-end;
    padding-bottom: 8px;
    justify-content: space-between;
    flex-wrap: wrap;
    .title-right {
      display:flex;
    }
  }
}
.no-margin {
  margin-top:0px;
  margin-bottom:0px;
  margin-right:0px;
  margin-left:0px;
}
.block-shortener {
  max-width: 57em;
}

.align-middle {
  align-self: center;
}
.flexer {
  display:flex;
  justify-content: space-between;
  align-items: center;
}
.margin-bottom-zero {
  margin-bottom: 0 !important;
}
.shadowed {box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);}
.border-bottom {
  border-bottom: 1px solid $borders;
  padding-bottom:16px;
  margin-bottom:16px;
}

.space_between {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  justify-content: space-between;
}
.detail-bumper {
  margin-right:32px;
}
table.table {
  thead {
    tr {
      th {
        padding-left:6px;
      }
    }
  }
}

.badge {
    background-color: $primary-color !important;
    line-height: 20px;
    font-size: 16px;
    margin-right: 3px;
    font: $primary-font !important;
    font-weight: 400;

    input {
        height: 20px;
        color: $primary-color;
    }

    .emailIconStyle {
        margin-left: 3px;
        cursor: pointer;
    }
    .emailPlusIconStyle {
        cursor: pointer;
    }

}

